--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 # secret keys
 secrets.py
 
+#django migrations exept initial one
+*/migrations/*.py
+!*/migrations/__init__.py
+!*/migrations/0001_initial.py
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
@@ -63,6 +68,7 @@ cover/
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
+*.sqlite3
 
 # Flask stuff:
 instance/
@@ -189,7 +195,7 @@ cython_debug/
 #  that can be found at https://github.com/github/gitignore/blob/main/Global/VisualStudioCode.gitignore
 #  and can be added to the global gitignore or merged into this file. However, if you prefer, 
 #  you could uncomment the following to ignore the entire vscode folder
-# .vscode/
+.vscode/
 
 # Ruff stuff:
 .ruff_cache/
