--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # secret keys
 secrets.py
 
+#deployment files
+*depl*
+
 #django migrations exept initial one
 */migrations/*.py
 !*/migrations/__init__.py
