--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,9 @@ secrets.py
 *depl*
 
 #django migrations exept initial one
-*/migrations/*.py
-!*/migrations/__init__.py
-!*/migrations/0001_initial.py
+**/migrations/*.py
+!**/migrations/__init__.py
+!**/migrations/0001_initial.py
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
